Java 8 support
Replaced Map.of and List.of